css/styles.css
/* ... */
.navbar-default.affix {
  background-color: white;
  border-color: rgba(34, 34, 34, 0.1);
}

.navbar-default.affix .navbar-header .navbar-brand {
  color: #222222;
}

.navbar-default.affix .navbar-header .navbar-brand:hover,
.navbar-default.affix .navbar-header .navbar-brand:focus {
  color: black;
}

.navbar-default.affix .nav>li>a,
.navbar-default.affix .nav>li>a:focus {
  color: #222222;
}

.navbar-default.affix .nav>li>a:hover,
.navbar-default.affix .nav>li>a:focus:hover {
  color: black;
}

.banner {
  width: 100%;
  height: 100%;
  background-color: rgb(181, 71, 71);
  overflow: auto;
}

.banner-text {
  color: white;
  padding-top: 3px;
  margin-bottom: 0px;
  text-align: center;
}

.dropdown-content>div {
  padding: 15px;
}

.dropdown-content>div>a {
  color: rgba(0, 0, 0, 0.7);
}

li:hover .dropdown-content {
  opacity: 1;
  height: auto;
}

.dropdown-content>div>.active-link {
  color: #fdcc52;
}

@media (min-width: 768px) {
  .dropdown-content {
    -webkit-transition: opacity 0.2s ease-out;
    -moz-transition: opacity 0.2s ease-out;
    -o-transition: opacity 0.2s ease-out;
    transition: opacity 0.2s ease-out;
    opacity: 0;
    height: 0;
    overflow: hidden;
    position: absolute;
    background-color: white;
    text-transform: uppercase;
    font-size: 11px;
    font-family: Lato, Helvetica, Arial, sans-serif;
    z-index: -5;
    text-align: center;
    border: 0;
    min-width: 120px;
    letter-spacing: 2px;
  }

  .dropdown-content.affix {
    border: 1px solid rgba(34, 34, 34, 0.1);
    border-top: 1px solid white;
  }
}

@media (max-width: 767px) {
  .dropdown-content {
    position: relative;
    background-color: white;
    border-top: 2px solid white;
    text-transform: uppercase;
    color: rgba(0, 0, 0, 0.7);
    font-size: 11px;
    font-family: Lato, Helvetica, Arial, sans-serif;
    z-index: 1;
    margin-left: 10px;
    letter-spacing: 2px;
  }
}

/* make responsive */
.landing {
  margin-top: 15%;
}

.wistem-title {
  font-size: 5em;
  color: #3eccd3;
}

.landing-description {
  font-size: 1.25em;
  color: black;
  opacity: 0.8;
}

/*make responsive*/
#anouncement {
  /* background-color: #ffbace; */
  background-color: #ffdee7;
  padding-top: 36px;
  padding-bottom: 36px;
}

.announcement-text {
  font-size: 24px;
  color: #b6003a;
}

.landing-divider {
  width: 700px;
  height: 1px;
  background-color: white;
  margin: 8px auto;
  opacity: 0.3;
}

.description {
  font-size: 14px;
  color: #4a4a4a;
  margin-left: 5em;
  margin-right: 5em;
  margin-bottom: 2em;
}

.description a {
  color: #4a4a4a;
  text-decoration: underline;
}

.values-image {
  height: 200px;
  width: 200px;
  border-radius: 50%;
  border: 4px solid #162c52;
}

.mission-image {
  padding-bottom: 40px;
  height: 100%;
  width: 100%;
  max-height: 848px;
  max-width: 615px;
}

@media (min-width: 990px) {
  .mission {
    display: flex;
    align-items: center;
  }

  .mission-title {
    text-align: left;
  }

  .mission-description {
    margin-bottom: 88px;
    margin-right: 88px;
  }
}

@media (max-width: 989px) {
  .mission {
    display: auto;
  }

  .mission-title {
    text-align: center;
  }

  .mission-image {
    display: block;
    margin: auto;
  }

  .mission-description {
    text-align: center;
    margin: auto;
    padding: 0 10%;
  }
}

@media (max-width: 400px) {
  .mapleleaf-image {
    display: flex;
  }

  .maple-leaf-description {
    margin-right: 180px;
  }
}

.mission-description {
  font-size: 14px;
  color: #4a4a4a;
  line-height: 22px;
}

.values,
.mission-title {
  font-size: 24px;
  color: #162c52;
}

.faq-title {
  color: #162c52;
}

.value-description {
  font-size: 14px;
  color: #4a4a4a;
  line-height: 22px;
  margin-bottom: 88px;
  padding: 0 48px;
}

.divider {
  width: 50%;
  margin: 12px auto 56px;
  background-color: #9b9b9b;
  opacity: 0.2;
  height: 1px;
}

.white-line {
  background-color: white;
}

header {
  background-image: url("../img/HeaderBackground.png");
  background-size: cover;
  background-color: white;
}

.navbar-default {
  background-color: white;
  color: black;
}

#sponsors {
  background-image: url("../img/leaves.svg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.events {
  background-color: #f2eeee;
  padding: 0 48px;
  padding-bottom: 48px;
  align-items: center;
  justify-content: center;
}

.event-container {
  padding: 16px 48px;
  margin-bottom: 48px;
  align-content: center;
}

.event-border-container {
  position: absolute;
  width: 100%;
  height: 100%;
  margin: -16px -48px;
  padding: 16px 48px;
}

.event-offset-border {
  position: relative;
  width: 100%;
  max-width: 400px;
  border-radius: 30px;
  margin: 0 auto;
  border: 5px solid white;
  border-radius: 30px;
  top: 32px;
  left: 32px;
  z-index: 1;
}

.event-offset-border:before {
  content: "";
  display: block;
  padding-top: 100%;
  /*ratio of 1:1 for square photo*/
}

.event {
  position: relative;
  width: 100%;
  max-width: 400px;
  border-radius: 30px;
  margin: 0 auto;
  top: 0;
  z-index: 2;
}

.event:before {
  content: "";
  display: block;
  padding-top: 100%;
  /* ratio of 1:1 for square photo*/
}

.event-photo {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  height: 100%;
  display: flex;
  margin-left: auto;
  margin-right: auto;
  background-position-x: center;
  background-size: cover;
  border-radius: 30px;
}

.event-time {
  font-size: 14px;
  color: #4a4a4a;
  opacity: 0.8;
}

.event-button {
  margin-bottom: 56px;
}

/* Team members styling */
.member-name {
  font-size: 18px;
  color: #0e1a41;
  height: 15px;
}

.member-linkedin {
  margin-top: 10px !important;
  cursor: pointer;
  vertical-align: 0px;
  width: 24px !important;
  height: 24px !important;
}
/* ... */

